--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>TempoDrama</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.png" type="image/png">
+
 </head>
 <body>
   <h1>TempoDrama</h1>
